added synergy calculation to equip_monster
