# app/models/itemcard.rb
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
 class Itemcard < Card
-  validates :title, :description, :image, :action, :draw_chance, :atk_points, :has_combination, :item_category, :type, presence: true
+  validates :title, :description, :image, :action, :draw_chance, :atk_points, :item_category, :type, presence: true
 
   def self.activate(card)
     case card.action # get the action from card
@@ -14,5 +14,12 @@ class Itemcard < Card
     else
       puts 'it was something else'
     end
+  end
+
+  # returns synergy value of given card_to_compare_against
+  def calculate_synergy_value(card_to_compare_against)
+    return 0 if card_to_compare_against&.animal != synergy_type
+
+    synergy_value
   end
 end
